--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
-PORT=8080
+PORT=
 USERNAME_PASSWORD=heshamsaad151t || PseleorU9iAt5Jun
 MONGODB=mongodb+srv://heshamsaad151t:PseleorU9iAt5Jun@cluster0.ke6t0eo.mongodb.net/?retryWrites=true&w=majority
 SECRETE_KEY=saad123
